<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#4A4A4A"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_sort"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/btn_desc_main_sort"
                android:tint="#4A4A4A"
                app:srcCompat="@drawable/ic_sort" />

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="232dp"
                android:layout_height="43dp"
                android:contentDescription="@string/img_desc_main_logo"
                app:srcCompat="@drawable/logo" />

            <ImageButton
                android:id="@+id/btn_add"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/btn_desc_main_add"
                android:tint="#4A4A4A"
                app:srcCompat="@drawable/ic_pen" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vocaCardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EAEAEA"
            android:orientation="horizontal"
            android:paddingTop="3dp"
            android:paddingBottom="3dp">

            <ImageButton
                android:id="@+id/btn_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/btn_desc_main_storage"
                android:tint="#4A4A4A"
                app:srcCompat="@drawable/ic_folder" />

            <Space
                android:layout_width="152dp"
                android:layout_height="32dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/btn_desc_main_delete"
                android:tint="#4A4A4A"
                app:srcCompat="@drawable/ic_trash" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>