<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Space
            android:layout_width="match_parent"
            android:layout_height="52dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/ic_rectangle1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_translate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:ems="11"
                    android:fontFamily="@font/roboto"
                    android:inputType="textAutoCorrect"
                    android:labelFor="@id/btn_translate"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_translate"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/btn_desc_new_translate"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_search" />

            </LinearLayout>
        </FrameLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_translated"
                    android:layout_width="36dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/img_desc_new_translated"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_translate" />

                <EditText
                    android:id="@+id/edit_translated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:labelFor="@id/img_translated"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
        </FrameLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_custom"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:background="@drawable/ic_rectangle3"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorPrimary" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggle_pos_n"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="2dp"
                android:background="@drawable/toggle_button"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorPrimary"
                android:textOff="@string/btn_pos_n"
                android:textOn="@string/btn_pos_n" />

            <ToggleButton
                android:id="@+id/toggle_pos_a"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="2dp"
                android:background="@drawable/toggle_button"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorPrimary"
                android:textOff="@string/btn_pos_a"
                android:textOn="@string/btn_pos_a" />

            <ToggleButton
                android:id="@+id/toggle_pos_ad"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="2dp"
                android:background="@drawable/toggle_button"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorPrimary"
                android:textOff="@string/btn_pos_ad"
                android:textOn="@string/btn_pos_ad" />

            <ToggleButton
                android:id="@+id/toggle_pos_v"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="2dp"
                android:background="@drawable/toggle_button"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorPrimary"
                android:textOff="@string/btn_pos_v"
                android:textOn="@string/btn_pos_v" />

            <ToggleButton
                android:id="@+id/toggle_pos_prep"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="2dp"
                android:background="@drawable/toggle_button"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorPrimary"
                android:textOff="@string/btn_pos_prep"
                android:textOn="@string/btn_pos_prep" />

            <ToggleButton
                android:id="@+id/toggle_pos_id"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="2dp"
                android:background="@drawable/toggle_button"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorPrimary"
                android:textOff="@string/btn_pos_id"
                android:textOn="@string/btn_pos_id" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:text="@string/btn_cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:text="@string/btn_add"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

    </TableRow>
</TableLayout>


